# series-temporelles

./: CMakeLists.txt  cAM.hpp  cAR.hpp  cARCH.hpp  cARMA.cpp  cARMA.hpp  cAbstractEpsilon.hpp  cAbstractMhu.hpp  cAbstractProcess.hpp  cCsteMhu.cpp  cCsteMhu.hpp  cCsteSigma.cpp  cCsteSigma.hpp  cEpsilonGaussian.hpp  cEpsilonStudent.hpp  cGARCH.hpp  cU.cpp  cU.hpp  cY.cpp  cY.hpp  lien_archi.txt
gsl-dir/gsl-dir/gsl-lib/Debug/Win32/: cblas.lib
gsl-dir/gsl-dir/gsl-lib/Debug/x64/: cblas.lib
gsl-dir/gsl-dir/gsl-lib/Release/Win32/: cblas.lib
projet_series_temporelles/: CMakeLists.txt
projet_series_temporelles/gsl-dir/gsl-dir/gsl-lib/Debug/Win32/: cblas.idb  gsl.idb
projet_series_temporelles/gsl-dir/gsl-dir/gsl-lib/Release/x64/: cblas.lib
projet_series_temporelles/src/: cAM.cpp  cAM.hpp  cAR.cpp  cAR.hpp  cARCH.cpp  cARCH.hpp  cARMA.cpp  cARMA.hpp  cAbstractMhu.hpp  cAbstractProcess.hpp  cCsteMhu.cpp  cCsteMhu.hpp  cCsteSigma.cpp  cEpsilonStudent.cpp  cGARCH.hpp  cY.cpp  cY.hpp
src/: cAM.cpp  cAM.hpp  cAR.cpp  cAR.hpp  cARCH.cpp  cARCH.hpp  cARMA.cpp  cARMA.hpp  cAbstractEpsilon.hpp  cAbstractMhu.hpp  cAbstractProcess.hpp  cAbstractSigma.hpp  cCsteMhu.cpp  cCsteMhu.hpp  cCsteSigma.cpp  cCsteSigma.hpp  cEpsilonGaussian.cpp  cEpsilonGaussian.hpp  cEpsilonStudent.cpp  cEpsilonStudent.hpp  cGARCH.cpp  cGARCH.hpp  cU.cpp  cU.hpp  cY.cpp  cY.hpp  entete.h  testBruitBlanc.cpp
